fixed some alignment

--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@ body,
   height: 10%;
   width: 10%;
   opacity: 1;
-  top: -1vh;
+  top: -11vh;
   left: 4vw;
   position: absolute;
 }
@@ -37,9 +37,9 @@ body,
   opacity: 0;
   height: auto;
   width: 10vw;
-  top: 50%; /* Center vertically */
-  left: 22%; /* Center horizontally */
-  transform: translate(-50%, -50%); /* Adjust for true centering */
+  top: 39vh; /* Center vertically */
+  left: 18vw; /* Center horizontally */
+  transform-origin: center center;
 
   position: absolute;
   animation: fade 1s steps(80, end);
@@ -76,7 +76,7 @@ body,
   max-width: 80vw;
   font-family: "Poppins", sans-serif;
   font-optical-sizing: auto;
-  font-weight: 500;
+  font-weight: 600;
   font-style: normal;
 }
 
@@ -209,7 +209,7 @@ h1 {
 	margin-top: 0px;
   font-family: "Poppins", sans-serif;
   font-optical-sizing: auto;
-  font-weight: 500;
+  font-weight: 5 00;
   font-style: normal;
 }
 
@@ -257,6 +257,13 @@ li {
   font-style: normal;
 }
 
+.bottom {
+  height: 197px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
 .cover {
 	width: 100%;
 	min-height: 100%;
@@ -279,7 +286,7 @@ li {
   position: relative;
   overflow: hidden;
   flex: 1;
-	margin: 0 6.5%; /* Adjust margins as needed */
+	margin: 0 0%; /* Adjust margins as needed */
   display: flex; /* Make sure columns are also flex containers */
   flex-direction: column; /* Stack columns vertically */
 }
@@ -296,9 +303,17 @@ li {
   position: relative;
   overflow: hidden;
   flex: 1;
-	margin: 0 5%; /* Adjust margins as needed */
+	margin: 0 0%; /* Adjust margins as needed */
   display: flex; /* Make sure columns are also flex containers */
   flex-direction: column; /* Stack columns vertically */
+}
+
+.right {
+  margin-right: 5% !important;
+}
+
+.left {
+  margin-left: 5% !important;
 }
 
 .even .column {
@@ -341,7 +356,7 @@ li {
   }
 
   .hackclub {
-    top: -9vh;
+    top: -19vh;
     height: 25vh;
     width: 25vw;
   }
